fix some layout issues, add more dropdowns

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -56,7 +56,7 @@ html {
     justify-content: center;
     align-items: flex-start;
     align-content: center;
-    width: 100%;
+
 }
 
 #big-container {
@@ -113,7 +113,9 @@ html {
     color: hsla(44, 68%, 94%, 1);
     padding: 0.5rem;
     font-size: 1.2rem;
-    font-weight: 500;
+    font-weight: 600;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
 }
 
 .scale-container {
@@ -126,7 +128,9 @@ html {
     color:hsla(44, 68%, 94%, 1);
     padding: 0.5rem;
     font-size: 1.2rem;
-    font-weight: 500;
+    font-weight: 600;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
 }
 
 .mode-container {
@@ -139,7 +143,9 @@ html {
     color: hsla(44, 68%, 94%, 1);
     padding: 0.5rem;
     font-size: 1.2rem;
-    font-weight: 500;
+    font-weight: 600;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
 }
 
 .dropdown-container {
@@ -181,6 +187,17 @@ html {
     display: none;
 }
 
+#minor-scale-container {
+    display: none;
+}
+
+#pentatonic-scale-container {
+    display: none;
+}
+
+#misc-scale-container {
+    display: none;
+}
 
 /*Styling text in containers*/
 
